RESOLVED FIXED125146
ASSERTION FAILED: !value || (value->isPrimitiveValue()) in WebCore::StyleProperties::getLayeredShorthandValue.
https://bugs.webkit.org/show_bug.cgi?id=125146
Summary ASSERTION FAILED: !value || (value->isPrimitiveValue()) in WebCore::StyleProp...
László Langó
Reported 2013-12-03 03:51:29 PST
STDERR: ASSERTION FAILED: !value || (value->isPrimitiveValue()) STDERR: /home/lango/Webkit/Webkit/Source/WebCore/css/CSSPrimitiveValue.h(396) : WebCore::CSSPrimitiveValue* WebCore::toCSSPrimitiveValue(WebCore::CSSValue*) STDERR: 1 0x7fdee4269376 WTFCrashWithSecurityImplication STDERR: 2 0x7fdedf568648 WebCore::toCSSPrimitiveValue(WebCore::CSSValue*) STDERR: 3 0x7fdedf6bf139 WebCore::StyleProperties::getLayeredShorthandValue(WebCore::StylePropertyShorthand const&) const STDERR: 4 0x7fdedf6bdbc8 WebCore::StyleProperties::getPropertyValue(WebCore::CSSPropertyID) const STDERR: 5 0x7fdedf6c10bc WebCore::StyleProperties::asText() const STDERR: 6 0x7fdedf69ebcc WebCore::PropertySetCSSStyleDeclaration::cssText() const STDERR: 7 0x7fdee052dbe7 WebCore::jsCSSStyleDeclarationCssText(JSC::ExecState*, JSC::JSValue, JSC::PropertyName) STDERR: 8 0x50cee5 JSC::PropertySlot::getValue(JSC::ExecState*, JSC::PropertyName) const STDERR: 9 0x7fdee3f23577 JSC::JSValue::get(JSC::ExecState*, JSC::PropertyName, JSC::PropertySlot&) const STDERR: 10 0x7fdee425b347 STDERR: 11 0x7fdee4265dfe
Attachments
Patch (4.06 KB, patch)
2013-12-03 03:59 PST, László Langó
no flags
Patch (4.35 KB, patch)
2013-12-03 06:09 PST, László Langó
no flags
László Langó
Comment 1 2013-12-03 03:59:54 PST
László Langó
Comment 2 2013-12-03 06:09:42 PST
Darin Adler
Comment 3 2013-12-03 08:59:24 PST
Comment on attachment 218291 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=218291&action=review > LayoutTests/fast/css/webkit-mask-crash-implicit-expected.txt:3 > +FAIL document.styleSheets[1].rules[0].style.cssText should be -webkit-mask-repeat: repeat-x; -webkit-mask-repeat-y: inherit;. Was -webkit-mask: inherit;. > +FAIL document.styleSheets[1].rules[0].style.getPropertyValue('-webkit-mask') should be . Was inherit. > +FAIL document.styleSheets[1].rules[0].style.getPropertyValue('-webkit-mask-repeat') should be repeat inherit. Was inherit. Why is FAIL, FAIL, FAIL expected? Is this another bug? Why not expect the values we actually expect?
WebKit Commit Bot
Comment 4 2013-12-03 09:26:33 PST
Comment on attachment 218291 [details] Patch Clearing flags on attachment: 218291 Committed r160010: <http://trac.webkit.org/changeset/160010>
WebKit Commit Bot
Comment 5 2013-12-03 09:26:35 PST
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 6 2014-04-19 10:14:52 PDT
*** Bug 122457 has been marked as a duplicate of this bug. ***
Ahmad Saleem
Comment 7 2022-08-20 17:05:31 PDT
*** Bug 118817 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.